--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -1,30 +1,22 @@
-<div class="services row row-content_column">
-	<figure id="design" class="service-container row-content">
-		<img class="img-service" src="res/img/Captura.jpg" alt="">
-		<figcaption class="description-service">
-			<h3 class="title-service">Design</h3>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, reprehenderit, officia, enim nesciunt unde debitis ut odit adipisci amet labore maiores sit temporibus aperiam facere soluta. Nulla veritatis suscipit fuga. </p>
-		</figcaption>
-	</figure>
-	<figure id="development" class="service-container row-content">
-		<figcaption class="description-service">
-			<h3 class="title-service">Development</h3>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, reprehenderit, officia, enim nesciunt unde debitis ut odit adipisci amet labore maiores sit temporibus aperiam facere soluta. Nulla veritatis suscipit fuga. </p>
-		</figcaption>
-		<img class="img-service" src="res/img/Captura.jpg" alt="">
-	</figure>
-	<figure id="marketing" class="service-container row-content">
-		<img class="img-service" src="res/img/Captura.jpg" alt="">
-		<figcaption class="description-service">
-			<h3 class="title-service">Marketing</h3>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, reprehenderit, officia, enim nesciunt unde debitis ut odit adipisci amet labore maiores sit temporibus aperiam facere soluta. Nulla veritatis suscipit fuga. </p>
-		</figcaption>
-	</figure>
-	<figure id="architecture" class="service-container row-content">
-		<figcaption class="description-service">
-			<h3 class="title-service">Architecture</h3>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, reprehenderit, officia, enim nesciunt unde debitis ut odit adipisci amet labore maiores sit temporibus aperiam facere soluta. Nulla veritatis suscipit fuga. </p>
-		</figcaption>
-		<img class="img-service" src="../res/img/Captura.jpg" alt="">
-	</figure>
+<div class="service-wrapper">
+	<div class="service">
+		<a ui-sref="service" class="services-container">
+			<h3>SERVICE0</h3>
+		</a>
+	</div>
+	<div class="service">
+		<a ui-sref="service" class="services-container">
+			<h3>SERVICE1</h3>
+		</a>
+	</div>
+	<div class="service">
+		<a ui-sref="service" class="services-container">
+			<h3>SERVICE2</h3>
+		</a>
+	</div>
+	<div class="service">
+		<a ui-sref="service" class="services-container">
+			<h3>SERVICE3</h3>
+		</a>
+	</div>
 </div>
