--- a/src/scss/framework/_styleguide.scss
+++ b/src/scss/framework/_styleguide.scss
@@ -9,20 +9,35 @@ $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
 
+$red-hex: #DD5454;
+$red-rgb: rgb(221,84,84);
+$yellow-hex: #FFEF82;
+$yellow-rgb: rgb(255,239,130);
+$gray-hex: #7C7C7C;
+$gray-rgb: rgb(124,124,124);
+$purple-hex: #9E63A5;
+$purple-rgb: rgb(158,99,165);
+$blue-hex: #58638D;
+$blue-rgb: rgb(88,99,141);
+
+$white: #fff;
+$white-gray: #fafafa;
 
 /*
-$title-color: ;
-$text-color-primary: ;
-$text-color-secondary: ;
+$font-size-h1: ;
+$font-size-h2: ;
+$font-size-h3: ;
+$font-size: 16px;
+
+$title-color-primary: ;
+$title-color-secondary: ; 
+$font-color-primary: ;
+$font-color-secondary: ;
+
 $link-color: ;
 $link-color-hover: ;
 
-
-$bg-color-primary: ;
-$bg-color-secondary: ;
-
-
-$text-title-size: ;
-$text-pharagraph-size: ;
-
+$bg-color-primary:;
+$bg-color-secondary:;
+$bg-color-dark:;
 */
