--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @import 'framework/_normalize.scss';
 @import 'framework/_styleguide.scss';
 @import 'framework/_typography.scss';
+@import 'framework/_text.scss';
 @import 'framework/_reset.scss';
 @import 'framework/_phantasm.scss';
 @import 'framework/_grid.scss';
@@ -19,6 +20,7 @@
 @import 'layouts/_about.scss';
 @import 'layouts/_wedo.scss';
 @import 'layouts/_services.scss';
+@import 'layouts/_service.scss';
 @import 'layouts/_portfolio.scss';
 @import 'layouts/_contact.scss';
 @import 'layouts/_footer.scss';
