--- a/src/scss/framework/_flex.scss
+++ b/src/scss/framework/_flex.scss
@@ -1,3 +1,29 @@
+%flex {
+	display: flex;
+}
+
+%flex-row {
+	flex-direction: row;
+}
+
+%flex-center {
+	justify-content: center;
+    align-items: center;
+}
+
+%flex-center_horizontal {
+	justify-content: center;
+}
+
+%flex-center_vertical {
+    align-items: center;
+}
+%flex-column {
+	flex-flow: column;
+}
+%flex-end {
+	align-items: flex-end;
+}
 .flex {
 	display: flex;
 }
