--- a/src/scss/layouts/_modal-project.scss
+++ b/src/scss/layouts/_modal-project.scss
@@ -17,10 +17,29 @@
 }
 .moda-contento {
 	width: 75%;
-	height: 80%;
+	height: 90%;
+	overflow: hidden;
+	@extend %flex; 
 	//margin: 0 auto;
 	//margin-top: 10rem;
 	background-color: #fff;
 	border-radius: 7px;
 	box-shadow: 0 0 10px rgba(0,0,0,.5);
+}
+.work-img, .work-detail {
+	width: 50%;
+	height: 100%
+}
+
+.work-img {
+	background-image: url('../img/work.jpg');
+}
+
+.close {
+	position: relative;
+	top: 0;
+	right: 0;
+	width: 50px;
+	height: 50px;
+	background-color: $accent-color;
 }
