--- a/src/scss/layouts/_wedo.scss
+++ b/src/scss/layouts/_wedo.scss
@@ -2,15 +2,25 @@
 	@extend %display-flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 100vh;
+    //height: 100vh;
     width: 80%;
     margin: 0 auto;
 }
 
+.service-description{    
+    width: 50%;
+    height: 50vh;
+    margin-bottom: 5rem;
+    @extend %flex;
+    @extend %flex-center;
+    .service-description-container {
+        width: 80%;
+    }
+}
 .wedo-fig {
     position: relative;
     width: 50%;
-    height: 50%;
+    height: 50vh;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -43,4 +53,26 @@
 .wedo-fig:hover {
     .wedo-fig_cap {background-color: rgba(250,250,250,.3);}
     .wedo-fig_img {transform: scale(1.3);}
+}
+
+.ribon-left:after, .ribon-right:before {
+    content:"";
+    position: absolute;
+    top: calc(50% - 10px);
+    display: block;
+    width: 0;
+    height: 0;
+    border: 20px solid $white-gray;
+    z-index: 99;
+    border-bottom-color: transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+}
+.ribon-left:after {
+    left: 0;
+}
+.ribon-right:before {
+    border-left-color: transparent;
+    border-right-color: $white-gray;
+    right: 0;   
 }
