quitando almohadilla-gatillo-numeral-hashtag

--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -9,7 +9,7 @@
 			<h3>SERVICE1</h3>
 		</a>
 	</div>
-	<div class="service">
+	<div class="hello service">
 		<a ui-sref="service" class="services-container">
 			<h3>SERVICE2</h3>
 		</a>
@@ -20,3 +20,20 @@
 		</a>
 	</div>
 </div>
+
+<!-- <script>
+	var alto = $(window).height();
+	console.log($(window));
+	$(window).scroll(function(){
+		//setTimeout(function(){
+			//document.querySelector('.hello').scrollIntoView({ 
+			//  behavior: 'smooth' 
+			//});
+		//},3000);
+		//console.log($(this).scroll());
+		//console.log($(window).scrollY());
+		$('html, body').animate({
+				scrollTop: '+='+alto
+		}, 2000);
+	});
+</script> -->
