--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -654,7 +654,7 @@ a.active {
   position: relative;
   bottom: 0%;
   left: 0%;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
   background: #000; }
@@ -663,6 +663,9 @@ a.active {
   width: 100%;
   bottom: 0;
   position: absolute; }
+
+.hidden {
+  display: none; }
 
 .video-container .filter {
   z-index: 100;
