--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -15,7 +15,7 @@
     position: relative;
     bottom: 0%;
     left: 0%;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
     background: #000;
@@ -24,6 +24,9 @@
     width: 100%;
     bottom: 0;
     position: absolute;
+}
+.hidden {
+	display: none;
 }
 .video-container .filter {
     z-index: 100;
