--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -49,7 +49,7 @@
 .banner {
 	margin-top: -91px;
 	background: {
-		image: url('../img/mall.png');
+		//image: url('../img/mall.png');
 		repeat: repeat;
 
 	}
