--- a/public/partials/componente.html
+++ b/public/partials/componente.html
@@ -1,6 +1,6 @@
-<!-- <h1>{{ $ctrl.componente }} <i>lol</i></h1> -->
+ <!-- <h1>holas<i>lol</i></h1> -->
 
- <ul data-ng-repeat="componentes in $ctrl.componente track by $index">
+<ul data-ng-repeat="componentes in $ctrl.componente track by $index">
  	<li>{{ componentes.titulo }}</li>
  	<li>{{ componentes.imagen }}</li>
  </ul>
