--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -474,7 +474,7 @@ a:hover {
 .wedo, .wedo-fig_cap a, .description-service, .footer-content, .footer-content div, .modal-flex-wrapper {
   display: flex; }
 
-.footer-content {
+.header .header-container, .footer-content {
   justify-content: space-between; }
 
 .service-description, .services-container, .element-info, .footer-content div {
@@ -529,12 +529,21 @@ a:hover {
 .view-container {
   padding-top: 91px; }
 
-.service-description, .services-container, .service-banner, .element-info, .moda-contento {
+.header .header-container, .header, .navbar, .service-description, .services-container, .service-banner, .element-info, .moda-contento {
   display: flex; }
 
 .service-description, .services-container, .element-info, .footer-content div {
   justify-content: center;
   align-items: center; }
+
+.header {
+  justify-content: center; }
+
+.navbar {
+  align-items: center; }
+
+.header .header-container, .footer-content {
+  justify-content: space-between; }
 
 .element-info {
   flex-flow: column; }
@@ -600,12 +609,18 @@ a:hover {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99; }
-  .header .row-content {
+  z-index: 99;
+  width: 100%; }
+  .header .header-container {
+    width: 80%;
     padding-top: 15px; }
 
 .logo {
   width: 170px; }
+
+.logo-mobile {
+  display: none;
+  width: 100px; }
 
 a.active {
   color: #333; }
@@ -622,21 +637,77 @@ a.active {
   display: block;
   width: 0;
   height: 0;
+  background-color: #333;
+  margin: 0 auto;
   margin-top: 3px;
-  border-bottom: 2px solid #333;
+  border-bottom: 1px solid #333;
   transition: .5s ease all; }
 
 .link:hover:after {
-  width: 100%; }
+  width: 100%;
+  /*width: 5px;
+  height: 5px;
+  background-color: $accent-color;
+  border-radius: 50%;*/ }
 
 .active:after {
-  content: "";
   display: block;
-  width: 100%;
-  height: 0;
-  margin-top: 3px;
-  border-bottom: 2px solid #333; }
+  width: 5px;
+  height: 5px;
+  background-color: #FF5252;
+  border-radius: 50%;
+  border-bottom: 0; }
 
+.active:hover:after {
+  width: 5px; }
+
+/*.link:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    margin-top: 3px;
+    border-bottom: 2px solid #333;
+    transition: .5s ease all;
+}
+.link:hover:after{
+    width: 100%;
+}
+
+.active:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 0;
+    margin-top: 3px;
+    border-bottom: 2px solid #333;
+}*/
+/*.active:before {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    background-color: $accent-color;
+    border-radius: 50%;
+}*/
+@media screen and (max-width: 420px) {
+  .logo {
+    display: none; }
+
+  .logo-mobile {
+    display: block; }
+
+  .menu-mobile {
+    display: block; }
+
+  .navbar {
+    position: fixed;
+    top: 0;
+    right: -100vw;
+    width: 100vw;
+    height: 100vh;
+    background-color: #FF5252;
+    z-index: 99x; } }
 .homepage-hero-module {
   border-right: none;
   border-left: none;
