--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -23,10 +23,49 @@
 .logo {
     width: 170px;
 }
+//START MOBILE
 .logo-mobile {
     display: none;
     width: 100px;
 }
+.menu-wrapper {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+.hamburger:before,.hamburger:after {
+  content: "";
+  position: relative;
+  left: 0;
+}
+.hamburger, .hamburger:before,.hamburger:after {
+  display: block;
+  width: 30px;
+  height: 0;
+  border-top: 1px solid black;
+  transition: .4s ease all;
+}
+.hamburger:before {
+  bottom: -8px;
+}
+.hamburger:after {
+  top: -10px;
+}
+.togle {
+  border-top-color: transparent;
+}
+.togle:before {
+  bottom: 0;
+  transform: rotate(50deg);
+}
+.togle:after {
+  top: 0;
+  transform: rotate(-50deg);
+}
+//END MOBILE
 .navbar {
    @extend %flex;
    @extend %flex-center_vertical;
@@ -106,25 +145,38 @@ a.active {
     border-radius: 50%;
 }*/
 @media screen and (max-width: 420px) {
+    .header .header-container {
+        width: 90%;
+        padding-top: 0;
+        align-items: center;
+    }
+
     .logo {
         display: none;
     }
 
     .logo-mobile {
         display: block;
+        z-index: 99;
     }
-    .menu-mobile {
-        display: block;
+    .menu-wrapper {
+        display: flex;
+        z-index: 99;
     }
 
     .navbar {
         position: fixed;
         top: 0;
-        right: -100vw;
+        left: 100vw;
         //display: none;
         width: 100vw;
         height: 100vh;
         background-color: $accent-color;
-        z-index: 99x;
+        z-index: 98;
+        transition: .5s ease all;
+    }
+
+    .navbar-mobile {
+        left: 0;
     }
 }
