--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -113,14 +113,14 @@ function scaleBannerVideoSize(element){
     <figure class="wedo-fig ribon-left">
         <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Design">
         <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({'#': 'design'})">Design</a>
+            <a href="" ui-sref="service({service: 'design'})">Design</a>
         </figcaption>
     </figure>
 
     <figure class="wedo-fig ribon-right">
         <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Development">
         <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({'#': 'development'})">Development</a>
+            <a href="" ui-sref="service({service: 'development'})">Development</a>
         </figcaption>
     </figure>
     <div class="service-description">
@@ -151,15 +151,15 @@ function scaleBannerVideoSize(element){
     <figure class="wedo-fig ribon-left">
         <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Marketing">
         <figcaption class="wedo-fig_cap">
-            <a href="" ui-sref="service({'#': 'marketing'})">Marketing</a>
+            <a href="" ui-sref="service({service: 'marketing'})">Marketing</a>
         </figcaption>
     </figure>
 
     <figure class="wedo-fig ribon-right">
         <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Architecture">
         <figcaption class="wedo-fig_cap">
-            <a href="#architecture" ui-sref="service({'#': 'architecture'})">Architecture</a>
-        </figcaption>
+            <a href="" ui-sref="service({service: 'architecture'})">Architecture</a>
+        </figcaption>s
     </figure>
     <div class="service-description">
         <div class="service-description-container">
@@ -191,14 +191,4 @@ $(window).scroll(function() {
         $('.header').css('background-color', 'transparent');                
     }
 });
-</script>        
-    	
-        
-        <!--<div class="row">-->
-        <!--    <div class="columna row-content row-content_medium row-content-column row-content-center_vertical">-->
-        <!--        <div class="element"></div>-->
-        <!--        <div class="element"></div>-->
-        <!--        <div class="element"></div>-->
-        <!--    </div>-->
-        <!--</div>-->
-        
+</script>
