--- a/public/partials/service.html
+++ b/public/partials/service.html
@@ -1,7 +1,7 @@
 <!--<div style="height: 30vh;"></div>-->
 
 <div id="parallax-banner" class="service-banner">
-	<h2 class="service-title">Web Development</h2>
+	<h2 class="service-title">{{ $ctrl.service[0].title}}</h2>
 </div>
 <div class="services row row-content_column">
 	<figure id="design" class="service-container row-content">
