--- a/src/scss/layouts/_services.scss
+++ b/src/scss/layouts/_services.scss
@@ -4,24 +4,32 @@
 .service {
 	width: 100%;
 	height: 110vh;
+	font-size: 2em;
 	background: {
 		repeat: no-repeat;
 		attachment: fixed;
 		size: 100% 100%;
 	}
+
+	h3 {
+		border: 2px solid white;
+		border-left: 0;
+		border-right: 0; 
+		padding: .5em; 
+	}
 }
 
 .service-wrapper .service:nth-child(1) {
-	background-image: url('../img/cuadro.jpg');
+	background-image: url('../img/wide/design.jpg');
 }
 .service-wrapper .service:nth-child(2) {
-	background-image: url('../img/cuadro0.png');
+	background-image: url('../img/wide/development.jpg');
 }
 .service-wrapper .service:nth-child(3) {
-	background-image: url('../img/cuadro1.jpg');
+	background-image: url('../img/wide/marketing.jpg');
 }
 .service-wrapper .service:nth-child(4) {
-	background-image: url('../img/cuadro2.jpg');
+	background-image: url('../img/wide/architect.jpg');
 }
 
 .services-container {
